gitops/apps/zot/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot
  annotations:
    cert-manager.io/cluster-issuer: bealvio
    external-dns.kubernetes.io/target: bealv.io
  labels:
    probe: enabled
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "zot.bealv.io"
  rules:
    - timeouts:
        request: "0s"
        backendRequest: "0s"
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zot
          port: 5000
